Displayed fixed column header aligned with table header when scroll over the table size.

--- a/src/components/DataTable/FixedColumn/FixedColumn.scss
+++ b/src/components/DataTable/FixedColumn/FixedColumn.scss
@@ -5,9 +5,10 @@
         z-index: 3;
         top: 0;
         .column-header {
-            margin-bottom: 0;
-            border-bottom: 0;
             position: absolute;
+            border-right: none;
+            border-bottom: none;
+            position: fixed;
         }
         .column-body {
             overflow: hidden;
